--- a/admin/index.html
+++ b/admin/index.html
@@ -7,19 +7,17 @@
   <title>Content Manager - Balaji Ganapathy Website</title>
   <link href="config.yml" type="text/yaml" rel="cms-config-url">
 </head>
-  <script>
-  window.CMS_MANUAL_INIT = true;
-  CMS.init();
-  console.log('CMS initialized manually!');
-</script>
 <body>
-  <!-- Decap CMS Script -->
-  <script src="https://unpkg.com/decap-cms@^3.1.1/dist/decap-cms.js"></script>
-  
-  <!-- Optional: Custom preview styles -->
+  <!-- Load Decap CMS -->
+  <script src="https://unpkg.com/decap-cms@3.1.1/dist/decap-cms.js"></script>
+
+  <!-- Initialize CMS after load -->
   <script>
-    // Register custom preview template if needed
-    CMS.registerPreviewStyle("/styles.css");
+    window.CMS_MANUAL_INIT = true;
+    window.addEventListener('load', function() {
+      CMS.init();
+      console.log('CMS initialized successfully');
+    });
   </script>
 </body>
 </html>
