--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Load Decap CMS -->
-  <script src="https://unpkg.com/decap-cms@3.1.1/dist/decap-cms.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/decap-cms@3.1.1/dist/decap-cms.js"></script>
 
   <!-- Initialize CMS after load -->
   <script>
