--- a/admin/index.html
+++ b/admin/index.html
@@ -4,20 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
-  <title>Content Manager - Balaji Ganapathy Website</title>
-  <link href="config.yml" type="text/yaml" rel="cms-config-url">
+  <title>Content Manager</title>
+  <link rel="cms-config-url" type="text/yaml" href="config.yml" />
 </head>
 <body>
-  <!-- Load Decap CMS -->
-  <script src="https://cdn.jsdelivr.net/npm/decap-cms@3.1.1/dist/decap-cms.js"></script>
-
-  <!-- Initialize CMS after load -->
-  <script>
-    window.CMS_MANUAL_INIT = true;
-    window.addEventListener('load', function() {
-      CMS.init();
-      console.log('CMS initialized successfully');
-    });
-  </script>
+  <!-- Stable Decap CMS Build -->
+  <script src="https://cdn.jsdelivr.net/npm/decap-cms@3.0.5/dist/decap-cms.js"></script>
 </body>
 </html>
